[package]
authors = ["Iegor <iegor@freedomfi.com>"]
build = "build.rs"
name = "tss2"
version = "0.1.1"
description = "Rust wrapper for tpm2-tss"
readme = "README.md"
repository = "https://github.com/openEPC/tss2-rs"
license = "Apache-2.0"

[build-dependencies]
bindgen = "0.60"

[features]
sys = []
esys =[]
fapi = []
default = ["sys", "esys", "fapi"]
